--- a/install.html
+++ b/install.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirect Based on Device</title>
+    <meta name="title" content="SuperFam">
+    <meta name="description" content="One App, All things Family. Reminder, To Do, List, Notes, Document Manager, Share Documents, Chat, Nominee, Vault, Will, Family Organiser, Chores, Tasks, Partner, Parents">
+    <meta name="keywords" content="family, documents, vault, security">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta property="og:title" content="SuperFam" />
+    <meta property="og:image" content="/assets/meta_title.jpg" />
+    <meta name="twitter:image" content="/assets/meta_title.jpg" />
     <script>
       function redirectBasedOnDevice() {
         var userAgent = navigator.userAgent || navigator.vendor || window.opera;
