--- a/install.html
+++ b/install.html
@@ -26,7 +26,7 @@
         }
         // Check if iOS device (iPhone, iPad, or iPod)
         else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-          finalLocation = "https://www.superfam.app";
+          finalLocation = "https://apps.apple.com/in/app/superfam/id6478280869";
         }
         setTimeout(function () {
           window.location.href = finalLocation;
@@ -135,7 +135,7 @@
             <p style="margin-top: 2vh;margin-bottom: 2vh">Available on</p>
         </div>
         <div>
-            <a href="https://www.superfam.app">
+            <a href="https://apps.apple.com/in/app/superfam/id6478280869">
                 <img alt="" loading="lazy" width="180" height="40" decoding="async"
                      src="assets/AppStore.svg">
             </a>
