--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="SuperFam">
     <meta name="description"
-          content="One App, All things Family. Reminder, To Do, List, Notes, Document Manager, Share Documents, Chat, Nominee, Vault, Will, Family Organiser, Chores, Tasks, Partner, Parents">
+          content="Simplify the everyday & secure your family with SuperFam.  Crafted with care for your family - documents, bills & expenses, smart location sharing, to-do lists, reminders, Super vault, Family AI and an integrated chat experience. 100% secure & private.">
     <meta name="keywords" content="family, documents, vault, security">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
