Add linkedin and clarity tracking

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <meta name="twitter:image" content="https://on.superfam.app/assets/superfam_tw.png"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
           rel="stylesheet">
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "qqpp9swqt4");
+    </script>
     <script>
       function redirectBasedOnDevice() {
         let finalLocation = "https://www.superfam.app";
@@ -153,5 +160,22 @@
         <a href="https://www.superfam.app/privacy" target="_blank">Privacy Policy</a>
     </div>
 </div>
+<script type="text/javascript">
+  _linkedin_partner_id = "7071508";
+  window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+  window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+</script><script type="text/javascript">
+  (function(l) {
+    if (!l){window.lintrk = function(a,b){window.lintrk.q.push([a,b])};
+      window.lintrk.q=[]}
+    var s = document.getElementsByTagName("script")[0];
+    var b = document.createElement("script");
+    b.type = "text/javascript";b.async = true;
+    b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+    s.parentNode.insertBefore(b, s);})(window.lintrk);
+</script>
+<noscript>
+    <img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=7071508&fmt=gif" />
+</noscript>
 </body>
 </html>
