--- a/lnkdn.html
+++ b/lnkdn.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="SuperFam">
-    <meta name="description" content="Your family member has invited you to join them on SuperFam!">
+    <meta name="description"
+          content="Simplify the everyday & secure your family with SuperFam.  Crafted with care for your family - documents, bills & expenses, smart location sharing, to-do lists, reminders, Super vault, Family AI and an integrated chat experience. 100% secure & private.">
     <meta name="keywords" content="family, documents, vault, security">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -19,7 +20,7 @@
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
         t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-      })(window, document, "clarity", "script", "qqpp9swqt4");
+      })(window, document, "clarity", "script", "qqq4ixhjs3");
     </script>
     <script>
       function redirectBasedOnDevice() {
@@ -159,5 +160,22 @@
         <a href="https://www.superfam.app/privacy" target="_blank">Privacy Policy</a>
     </div>
 </div>
+<script type="text/javascript">
+  _linkedin_partner_id = "7071508";
+  window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+  window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+</script><script type="text/javascript">
+  (function(l) {
+    if (!l){window.lintrk = function(a,b){window.lintrk.q.push([a,b])};
+      window.lintrk.q=[]}
+    var s = document.getElementsByTagName("script")[0];
+    var b = document.createElement("script");
+    b.type = "text/javascript";b.async = true;
+    b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+    s.parentNode.insertBefore(b, s);})(window.lintrk);
+</script>
+<noscript>
+    <img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=7071508&fmt=gif" />
+</noscript>
 </body>
 </html>
